# aicubench

./: .gitignore  3939.json  AGENTS.md  HowToUse.md  README.ja.md  README.md  aicubench_colab.ipynb  pyproject.toml  sd15_prompts.txt  setup.py
49/45b331b004/: metadata.json
49/45b331b004/0/: context.md  full.jsonl  metadata.json  prompt.txt  summary.txt
72/7fa4dbbb0e/: metadata.json
72/7fa4dbbb0e/0/: context.md  full.jsonl  metadata.json  prompt.txt  summary.txt
72/cadc807c1d/: metadata.json
72/cadc807c1d/0/: context.md  full.jsonl  metadata.json  summary.txt
a1/895dc34249/: metadata.json
a1/895dc34249/0/: context.md  full.jsonl  metadata.json  prompt.txt  summary.txt
aicubench/: __init__.py  main.py
aicubench/compare/: __init__.py  cli.py  grid.py  models.py  runner.py
benchmarks/: image.py  system_info.py
output/: results.json
output/bench01/: results.json
output/elena-6models/: results.json
prompts/: elena-base.txt  elena-negative.txt  landscape-fantasy.txt  negative-standard.txt  portrait-realistic.txt
scripts/: clean.sh  generate_sd15.py  run_benchmark.sh  setup.sh  submit_result.py
templates/: report_template.html
workflows/: sd15-00.json
workflows/api/: 00_sdxl_api.json  01_gpt_image_api.json  02API_elena_nano_banana-pro.json  03_animagine_api.json  04_flux2_klein_api.json  04_flux_api.json  05_wai_api.json  06_mellow_pencil_api.json  07_z_image_turbo_api.json
